initial ev load trace generation

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ dataset/dataset_below_threshold_train.csv
 dataset/dataset_below_threshold_test.csv
 dataset_train.csv
 files_processed_train.csv
+dataset_test.csv
+files_processed_test.csv
