--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /.env
 data/load/faraday_large
 data/load/processed_poster
+data/ev
 dataset/dataset_below_threshold_train.csv
 dataset/dataset_below_threshold_test.csv
