Update EV trace generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
 /.env
+__pycache__/
+.DS_Store
+**/.DS_Store
+
 data/load/faraday_large
 data/load/processed_poster
-data/ev/train
-data/ev/test
+data/ev/out
+data/ev/merged
 data/test
+
 dataset/dataset_below_threshold_train.csv
 dataset/dataset_below_threshold_test.csv
 dataset/dataset_test_eue_interleaved_threshold3020.csv
 dataset/dataset_test_eveue_interleaved.csv
 dataset/dataset_test_pecan.csv
+
 model/out
 dataset_train.csv
 files_processed_train.csv
